--- a/web_flask/static/styles/3-footer.css
+++ b/web_flask/static/styles/3-footer.css
@@ -1,11 +1,14 @@
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-    height: 60px;
-    border-top: 1px solid #CCCCCC;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	/* position: absolute; */
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	text-align: center;
+	/* line-height: 30px; */
+	background-color: white;
+	border-top: 1px solid #CCCCCC;
 }
