--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -1,91 +1,114 @@
-.filters {
-    background-color: white;
+
+.filters .amenities:hover,
+.filters .locations:hover {
+  background-color: #FAFAFA;
+  cursor: pointer;
+}
+
+.container .filters {
+    position: relative;
+    background: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    display: flex;
-    align-items: center;
 }
 
-section.filters > button{
-    font-size: 18px;
-    color: white;
-    background-color: #FF5A5F;
-    height: 48px;
-    border: 0px;
-    border-radius: 4px;
-    width: 20%;
-    margin-left: auto;
-    margin-right: 30px;
-    opacity: 1;
+.filters div {
+    display: inline-grid;
 }
 
-section.filters > button:hover {
-    opacity: 0.9;
-}
-
-.locations, .amenities {
-    height: 100%;
-    width: 25%;
-    padding-left: 50px;
-}
-
-.locations {
-    border-right: 1px solid #DDDDDD;
-}
-.locations > h3, .amenities > h3 {
+.filters h2 {
+    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     font-weight: 600;
-    margin: 12px 0 5px 0;
 }
 
-.locations > h4, .amenities > h4 {
+.filters h3 {
+    margin-left: 15%;
+    margin-bottom: 0;
+    font-weight: 600;
+}
+
+.filters h4 {
+    margin-left: 15%;
+    margin-top: 0;
     font-weight: 400;
     font-size: 14px;
-    margin: 0 0 5px 0;
+}
+.filters .amenities,
+.filters .locations {
+	height: 100%;
+	width: 25%;
+}
+
+.filters .locations {
+    border-right: 1px solid #DDDDDD;
+}
+
+.filters .amenities,
+.amenities .popover {
+	margin-left: -3px;
 }
 
 .popover {
-    display: none;
-    position: relative;
-    left: -51px;
-    background-color: #FAFAFA;
+    visibility: hidden;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    z-index: 1;
-    padding: 30px 50px 30px 0;
-    margin-top: 17px;
+    background: #FAFAFA;
+    padding-bottom: 25px;
+    height: 300px;
+    overflow-y: auto;
 }
 
-.popover, .popover ul {
+.amenities .popover {
+    padding: 20px 0;
+    margin-top: 1%;
+}
+
+.locations .popover {
+    margin-top: 1%;
+}
+
+.popover ul {
     list-style-type: none;
-}
-.locations:hover > .popover {
-    display: block;
+    padding: 5px 0 5px 20px;
 }
 
-.amenities:hover > .popover {
-    display: block;
+.popover ul li {
+    padding-bottom: 5px;
 }
 
-.popover h2 {
-    margin-top: 0px;
-    margin-bottom: 5px;
+.amenities:hover .popover,
+.locations:hover .popover {
+    visibility: visible;
 }
 
-.locations > .popover > li {
-    margin-bottom: 30px;
-    margin-left: 30px;
-}
-.locations > .popover > li > ul {
-    padding-left: 20px;
-}
-.locations > .popover > li > ul > li {
-    margin-bottom: 10px;
+.filters button {
+	color: #FFFFFF;
+	font-size: 18px;
+	
+	height: 48px;
+	width: 20%;
+	background-color: #FF5A5F;
+	/* border-style: none; */
+	border: none;
+	border-radius: 4px;
+
+	float: right;
+	margin-top: 12px;
+	margin-bottom: 12px;
+	margin-right: 30px;
 }
 
-.amenities > .popover > li {
-    margin-left: 50px;
-    margin-bottom: 10px;
+.filters button:hover {
+	cursor: pointer;
+	background-color: #FF5A5FE6;
+	/* opacity: 90%; */
+}
+
+ul {
+	font-size: 87%;
 }
